crawler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synergychat-crawler # naming
  labels:
    app: synergychat-crawler #select pods this deployment manages
spec:
  replicas: 1 # number of pods deployment maintains
  selector:
    matchLabels:
      app: synergychat-crawler # match metadata labels
  template:
    metadata:
      labels:
        app: synergychat-crawler # labels are important, tells k8s which pod belog to which deployments
    spec:
      volumes:
        - name: cache-volume
          emptyDir: {}
      containers:
        - name: synergychat-crawler-1
          image: bootdotdev/synergychat-crawler:latest # where to pull docker img from
          volumeMounts: # mount volume below at path /cache
            - name: cache-volume
              mountPath: /cache
        - name: synergychat-crawler-2
          image: bootdotdev/synergychat-crawler:latest # where to pull docker img from
          volumeMounts: # mount volume below at path /cache
            - name: cache-volume
              mountPath: /cache
        - name: synergychat-crawler-3
          image: bootdotdev/synergychat-crawler:latest # where to pull docker img from
          volumeMounts: # mount volume below at path /cache
            - name: cache-volume
              mountPath: /cache
