api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: synergychat-api # controller will continuously scan for pods with this name
  type: ClusterIP
  ports:
    - protocol: TCP # accounts for http
      port: 80 # service listens on port 80
      targetPort: 8080 # forwards traffic to pods listening on port 8080
