app-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
   name: app-gateway
spec:
    gatewayClassName: app-gatewayclass
    listeners:
       - name: http
         protocol: HTTP
         port: 80
